Atualizei certificados e adicionei index.html na raiz

--- a/i/es/certificados.html
+++ b/i/es/certificados.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html class="no-js" lang="es-ES">
+<html class="no-js" lang="es">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>TF Certificados – Certificados Digitales Fáciles y Rápidos</title>
     <meta
       name="description"
-      content="Emisión de certificados digitales por videoconferencia en 15 minutos. Soluciones para e-CPF, e-CNPJ, SafeID y más, en Brasil o en cualquier lugar del mundo."
+      content="Emisión de certificados digitales por videoconferencia en 15 minutos. Soluciones para e-CPF, e-CNPJ, SafeID y más, en Brasil o en cualquier parte del mundo."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -37,7 +37,6 @@
           0 10px 10px -5px rgba(0, 0, 0, 0.04);
       }
 
-      /* Hero Section */
       .hero-section {
         background: linear-gradient(
           135deg,
@@ -460,7 +459,6 @@
         margin-bottom: 15px;
       }
 
-      /* Header Styles */
       .bd-header-top {
         background: var(--bg-white);
         padding: 10px 20px;
@@ -691,7 +689,7 @@
               <a href="#">
                 <span><i class="fa-light fa-location-dot"></i></span>Calle 12 de
                 Octubre, 1489, FDS, Vila do Estádio, Presidente Prudente/SP -
-                Brasil - CEP 19.015-090
+                Brasil - CP 19.015-090
               </a>
             </li>
           </ul>
@@ -719,22 +717,22 @@
                         <a style="font-size: 18px" href="#topo">Inicio</a>
                       </li>
                       <li>
-                        <a style="font-size: 18px" href="#servicios"
+                        <a style="font-size: 18px" href="#servicos"
                           >Servicios</a
                         >
                       </li>
                       <li>
-                        <a style="font-size: 18px" href="#testimonios"
+                        <a style="font-size: 18px" href="#depoimentos"
                           >Testimonios</a
                         >
                       </li>
                       <li>
-                        <a style="font-size: 18px" href="#socio"
+                        <a style="font-size: 18px" href="#parceiro"
                           >Conviértete en Socio</a
                         >
                       </li>
                       <li>
-                        <a style="font-size: 18px" href="#contacto">Contacto</a>
+                        <a style="font-size: 18px" href="#contato">Contacto</a>
                       </li>
                     </ul>
                   </nav>
@@ -774,7 +772,7 @@
                         style="border-radius: 3px"
                       />
                     </a>
-                    <a class="bd-btn btn-primary" href="#contacto">
+                    <a class="bd-btn btn-primary" href="#contato">
                       Contáctanos
                       <i class="fa-regular fa-arrow-right-long"></i>
                     </a>
@@ -798,46 +796,13 @@
         </span>
         <ul>
           <li><a href="#topo">Inicio</a></li>
-          <li><a href="#servicios">Servicios</a></li>
-          <li><a href="#testimonios">Testimonios</a></li>
-          <li><a href="#socio">Conviértete en Socio</a></li>
-          <li><a href="#contacto">Contacto</a></li>
+          <li><a href="#servicos">Servicios</a></li>
+          <li><a href="#depoimentos">Testimonios</a></li>
+          <li><a href="#parceiro">Conviértete en Socio</a></li>
+          <li><a href="#contato">Contacto</a></li>
         </ul>
         <div class="bd-header-meta">
-          <a href="/i/zh/certificados.html">
-            <img
-              src="/i/assets/images/china.svg"
-              width="40"
-              height="auto"
-              alt="China"
-            />
-          </a>
-          <a href="/i/br/certificados.html">
-            <img
-              src="/i/assets/images/brasil.svg"
-              width="40"
-              height="auto"
-              alt="Brasil"
-            />
-          </a>
-          <a href="/i/en/certificados.html">
-            <img
-              src="/i/assets/images/eua.svg"
-              width="40"
-              height="auto"
-              alt="EE.UU."
-            />
-          </a>
-          <a href="/i/es/certificados">
-            <img
-              src="/i/assets/images/espanha.png"
-              width="40"
-              height="auto"
-              alt="España"
-              style="border-radius: 3px"
-            />
-          </a>
-          <a class="bd-btn btn-primary" href="#contacto">
+          <a class="bd-btn btn-primary" href="#contato">
             Contáctanos
             <i class="fa-regular fa-arrow-right-long"></i>
           </a>
@@ -876,7 +841,7 @@
         </div>
       </section>
 
-      <section class="section section-white" id="servicios">
+      <section class="section section-white" id="servicos">
         <div class="container">
           <div class="section-header">
             <h2 class="section-title">Nuestros Certificados Digitales</h2>
@@ -981,12 +946,13 @@
               <div class="card-icon">
                 <i class="fa-solid fa-user-check"></i>
               </div>
-              <h3 class="card-title">Programa de Recomendación</h3>
+              <h3 class="card-title">Programa de Referidos</h3>
               <div class="commission-highlight">Comisión de hasta 40%</div>
               <p class="card-description">
-                Recomienda clientes y gana comisiones por cada certificado
-                emitido. Comercio electrónico personalizado con tu marca y pago
-                garantizado hasta el día 10 del mes siguiente.
+                Refiere clientes y gana comisiones por cada certificado emitido.
+                Obtén una plataforma de comercio electrónico personalizada con
+                tu marca y pagos garantizados antes del día 10 del mes
+                siguiente.
               </p>
               <ul
                 style="
@@ -995,13 +961,13 @@
                   margin-bottom: 25px;
                 "
               >
-                <li>Comisiones de hasta 40%</li>
+                <li>Comisión de hasta 40%</li>
                 <li>Plataforma propia personalizada</li>
                 <li>Soporte técnico completo</li>
-                <li>Materiales de marketing incluidos</li>
+                <li>Material de marketing incluido</li>
               </ul>
-              <a href="#contacto" class="btn btn-primary"
-                >Conviértete en Recomendador</a
+              <a href="#contato" class="btn btn-primary"
+                >Conviértete en Referidor</a
               >
             </div>
 
@@ -1009,12 +975,12 @@
               <div class="partnership-icon">
                 <i class="fa-solid fa-store"></i>
               </div>
-              <h3 class="card-title">Programa de Reventa</h3>
+              <h3 class="card-title">Programa de Revendedores</h3>
               <div class="commission-highlight">Precios Especiales</div>
               <p class="card-description">
-                Adquiere certificados digitales a precios especiales para
-                reventa. Ten total autonomía para definir tus precios y atender
-                a tus clientes.
+                Compra certificados digitales a precios especiales para
+                revenderlos. Obtén autonomía total en los precios y atiende a
+                tus clientes.
               </p>
               <ul
                 style="
@@ -1024,14 +990,11 @@
                 "
               >
                 <li>Descuentos progresivos por volumen</li>
-                <li>Autonomía total de fijación de precios</li>
+                <li>Autonomía total en los precios</li>
                 <li>Soporte técnico dedicado</li>
                 <li>Capacitación completa incluida</li>
               </ul>
-              <a
-                style="font-size: 12px"
-                href="#contacto"
-                class="btn btn-primary"
+              <a style="font-size: 12px" href="#contato" class="btn btn-primary"
                 >Conviértete en Revendedor</a
               >
             </div>
@@ -1054,7 +1017,7 @@
                 margin-bottom: 20px;
               "
             >
-              ¿Listo para Iniciar tu Asociación?
+              ¿Listo para comenzar tu asociación?
             </h4>
             <p
               style="
@@ -1066,19 +1029,19 @@
               Contáctanos y descubre cómo aumentar tus ingresos con TF Assessor.
             </p>
             <div class="btn-group">
-              <a href="#contacto" class="btn btn-primary">
+              <a href="#contato" class="btn btn-primary">
                 <i class="fa-solid fa-rocket"></i>
                 <p style="color: white">Solicitar Asociación</p>
               </a>
               <a
                 style="background: var(--secondary-color)"
-                href="https://web.whatsapp.com/send?phone=5518997284321&text=¡Hola! Me gustaría saber más sobre los programas de asociación de CertiDoc."
+                href="https://web.whatsapp.com/send?phone=5518997284321&text=¡Hola! Quiero saber más sobre el programa de socios de CertiDoc."
                 class="btn btn-outline"
                 target="_blank"
               >
                 <i class="fa-brands fa-whatsapp"></i>
                 <p style="font-size: 18px; color: white">
-                  Asociaciones vía WhatsApp
+                  Solicitar Asociación por WhatsApp
                 </p>
               </a>
             </div>
@@ -1091,7 +1054,7 @@
           <div class="section-header">
             <h2 class="section-title">Preguntas Frecuentes</h2>
             <p class="section-description">
-              Respondemos las principales dudas sobre la certificación digital
+              Resolvemos las principales dudas sobre los certificados digitales
               para ayudarte a tomar una decisión informada.
             </p>
           </div>
@@ -1104,7 +1067,7 @@
               <div class="feature-content">
                 <h4>¿Cómo funciona la videoconferencia?</h4>
                 <p>
-                  El proceso es simple y seguro. Programas una hora, te conectas
+                  El proceso es simple y seguro. Programas una cita, te conectas
                   por videoconferencia y nuestro equipo valida tus datos en
                   tiempo real.
                 </p>
@@ -1116,11 +1079,11 @@
                 <i class="fa-solid fa-clock"></i>
               </div>
               <div class="feature-content">
-                <h4>¿Cuánto tiempo tarda en recibirse?</h4>
+                <h4>¿Cuánto tiempo tarda recibir el certificado?</h4>
                 <p>
-                  Tras la videoconferencia, tu certificado se emite en hasta 15
+                  Tras la videoconferencia, tu certificado se emite en 15
                   minutos y se envía directamente a tu correo electrónico, listo
-                  para usar de inmediato.
+                  para usar.
                 </p>
               </div>
             </div>
@@ -1130,11 +1093,11 @@
                 <i class="fa-solid fa-file-certificate"></i>
               </div>
               <div class="feature-content">
-                <h4>¿Qué documentos son necesarios?</h4>
+                <h4>¿Qué documentos se necesitan?</h4>
                 <p>
-                  DNI, CPF y comprobante de domicilio para e-CPF. Para e-CNPJ,
-                  también se requieren documentos de la empresa, como contrato
-                  social y CNPJ.
+                  Para el e-CPF: documento de identidad, CPF y comprobante de
+                  residencia. Para el e-CNPJ: documentos de la empresa, como el
+                  contrato social y CNPJ.
                 </p>
               </div>
             </div>
@@ -1147,7 +1110,7 @@
                 <h4>¿Es seguro y tiene validez legal?</h4>
                 <p>
                   Sí, nuestros certificados cumplen con todos los estándares de
-                  ICP-Brasil y tienen validez legal, siendo aceptados por
+                  ICP-Brasil, con validez legal y reconocimiento por
                   instituciones públicas y privadas.
                 </p>
               </div>
@@ -1159,7 +1122,7 @@
       <section class="stats-section">
         <div class="container">
           <h2 class="section-title" style="color: white; margin-bottom: 50px">
-            Números que Inspiran Confianza
+            Cifras que Impresionan
           </h2>
           <div class="stats-grid">
             <div class="stat-item">
@@ -1167,7 +1130,7 @@
               <span class="stat-label">Años de Experiencia</span>
             </div>
             <div class="stat-item">
-              <span class="stat-number">10.000+</span>
+              <span class="stat-number">10,000+</span>
               <span class="stat-label">Certificados Emitidos</span>
             </div>
             <div class="stat-item">
@@ -1182,23 +1145,23 @@
         </div>
       </section>
 
-      <section class="section section-white" id="testimonios">
+      <section class="section section-white" id="depoimentos">
         <div class="container">
           <div class="section-header">
-            <h2 class="section-title">Lo que Dicen Nuestros Clientes</h2>
+            <h2 class="section-title">Testimonios</h2>
             <p class="section-description">
-              TF Assessor tiene una calificación máxima en Google. Más de 400
-              clientes han compartido sus experiencias positivas con nosotros.
+              TF Assessor tiene la calificación más alta en Google. Más de 400
+              clientes han compartido sus experiencias positivas.
             </p>
           </div>
 
           <div class="testimonials-grid">
             <div class="testimonial">
               <p class="testimonial-content">
-                El servicio prestado por TF Assessor superó todas las
-                expectativas. Se ocuparon de cada detalle de mi situación e
-                incluso proporcionaron información adicional. Recomiendo mucho
-                la empresa; servicio excelente y altamente personalizado.
+                El servicio de TF Assessor superó todas las expectativas.
+                Cuidaron cada detalle de mi caso e incluso ofrecieron
+                información adicional. Recomiendo encarecidamente esta empresa;
+                el servicio es excepcional y altamente personalizado.
               </p>
               <div class="testimonial-author">
                 <div class="author-avatar">CM</div>
@@ -1211,11 +1174,10 @@
 
             <div class="testimonial">
               <p class="testimonial-content">
-                Mi experiencia con TF Assessor fue la mejor posible; quedé muy
-                satisfecho. Estaba dudoso porque ya había obtenido mi
-                certificado digital con otra empresa, pero me arriesgué con el
-                sistema en línea de TF Assessor, y la atención fue clara,
-                objetiva y amigable.
+                Mi experiencia con TF Assessor fue la mejor, estoy muy
+                satisfecho. Tenía dudas porque ya había obtenido un certificado
+                digital con otra empresa, pero al probar el sistema en línea de
+                TF Assessor, el servicio fue claro, objetivo y amigable.
               </p>
               <div class="testimonial-author">
                 <div class="author-avatar">GB</div>
@@ -1229,13 +1191,13 @@
         </div>
       </section>
 
-      <section class="section section-light" id="contacto">
+      <section class="section section-light" id="contato">
         <div class="container">
           <div class="section-header">
             <h2 class="section-title">Contáctanos</h2>
             <p class="section-description">
-              Nuestro equipo especializado está listo para atenderte. Elige la
-              forma más conveniente de contactarnos.
+              Nuestro equipo de expertos está listo para ayudarte. Elige la
+              forma de contacto más conveniente.
             </p>
           </div>
 
@@ -1246,17 +1208,17 @@
               </div>
               <h3 class="card-title">WhatsApp</h3>
               <p class="card-description">
-                Atención rápida y personalizada vía WhatsApp. Haz tus preguntas
-                y solicita tu certificado directamente por chat.
+                Soporte rápido y personalizado a través de WhatsApp. Haz tus
+                preguntas y solicita tu certificado directamente por chat.
               </p>
               <a
-                href="https://web.whatsapp.com/send?phone=5518997284321&text=¡Hola! Me gustaría solicitar mi certificado digital."
+                href="https://web.whatsapp.com/send?phone=5518997284321&text=¡Hola! Quiero solicitar mi certificado digital."
                 class="btn btn-primary"
                 target="_blank"
                 style="font-size: 14px"
               >
                 <i class="fa-brands fa-whatsapp"></i>
-                Conversar en WhatsApp
+                Chatear en WhatsApp
               </a>
             </div>
 
@@ -1285,8 +1247,8 @@
               </div>
               <h3 class="card-title">Teléfono</h3>
               <p class="card-description">
-                Habla directamente con nuestro equipo por teléfono. Horario de
-                atención: Lunes a Viernes, de 8h a 18h.
+                Contacta directamente con nuestro equipo por teléfono. Horario:
+                lunes a viernes, de 8 a 18 horas.
               </p>
               <a
                 href="tel:+5518997284321"
@@ -1316,7 +1278,7 @@
                 margin-bottom: 15px;
               "
             >
-              🚀 ¿Listo para tu Certificado Digital?
+              🚀 ¿Listo para obtener tu certificado digital?
             </h4>
             <p
               style="
@@ -1325,7 +1287,7 @@
                 font-size: 18px;
               "
             >
-              Emitido en minutos • Por videoconferencia • Válido en todo Brasil
+              Emisión en minutos • Por videoconferencia • Válido en todo Brasil
             </p>
             <a
               href="https://parceiro.gestaoar.shop/certidoc/tf-fiscal"
@@ -1393,7 +1355,7 @@
 
     <a
       class="contact-badge"
-      href="https://web.whatsapp.com/send?phone=5518997284321&amp;text=¡Hola!%20Me%20gustaría%20hablar%20sobre%20CertiDoc."
+      href="https://web.whatsapp.com/send?phone=5518997284321&amp;text=¡Hola! Quiero saber más sobre CertiDoc."
       target="_blank"
     ></a>
     <style>
