--- a/i/zh/certificados.html
+++ b/i/zh/certificados.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>TF证书 – 快速便捷的数字证书</title>
+    <title>TF证书 – 简单快速的数字证书</title>
     <meta
       name="description"
-      content="通过视频会议在15分钟内颁发数字证书。提供e-CPF、e-CNPJ、SafeID等解决方案，适用于巴西或全球。"
+      content="通过视频会议在15分钟内颁发数字证书。提供e-CPF、e-CNPJ、SafeID等解决方案，适用于巴西或全球任何地方。"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -37,7 +37,6 @@
           0 10px 10px -5px rgba(0, 0, 0, 0.04);
       }
 
-      /* Hero Section */
       .hero-section {
         background: linear-gradient(
           135deg,
@@ -460,7 +459,6 @@
         margin-bottom: 15px;
       }
 
-      /* Header Styles */
       .bd-header-top {
         background: var(--bg-white);
         padding: 10px 20px;
@@ -690,7 +688,8 @@
             <li>
               <a href="#">
                 <span><i class="fa-light fa-location-dot"></i></span
-                >巴西圣保罗州普雷西登特普鲁登特市10月12日街1489号，FDS，体育场村，邮编19.015-090
+                >巴西圣保罗州普雷西登特普鲁登特市10月12日街1489号，FDS，Vila do
+                Estádio，邮编19.015-090
               </a>
             </li>
           </ul>
@@ -706,7 +705,7 @@
                     <a href="./">
                       <img
                         src="/i/assets/images/logo.png"
-                        alt="TF Assessor标志"
+                        alt="TF Assessor Logo"
                       />
                     </a>
                   </div>
@@ -771,7 +770,6 @@
                         style="border-radius: 3px"
                       />
                     </a>
-
                     <a class="bd-btn btn-primary" href="#contato">
                       联系我们
                       <i class="fa-regular fa-arrow-right-long"></i>
@@ -802,40 +800,6 @@
           <li><a href="#contato">联系我们</a></li>
         </ul>
         <div class="bd-header-meta">
-          <a href="/i/zh/certificados">
-            <img
-              src="/i/assets/images/china.svg"
-              width="40"
-              height="auto"
-              alt="中国"
-            />
-          </a>
-          <a href="/i/br/certificados.html">
-            <img
-              src="/i/assets/images/brasil.svg"
-              width="40"
-              height="auto"
-              alt="巴西"
-            />
-          </a>
-          <a href="/i/en/certificados.html">
-            <img
-              src="/i/assets/images/eua.svg"
-              width="40"
-              height="auto"
-              alt="美国"
-            />
-          </a>
-          <a href="/i/es/certificados.html">
-            <img
-              src="/i/assets/images/espanha.png"
-              width="40"
-              height="auto"
-              alt="西班牙"
-              style="border-radius: 3px"
-            />
-          </a>
-
           <a class="bd-btn btn-primary" href="#contato">
             联系我们
             <i class="fa-regular fa-arrow-right-long"></i>
@@ -847,11 +811,11 @@
     <main>
       <section class="hero-section">
         <div class="hero-content">
-          <h1 class="hero-title">快速获取数字证书</h1>
+          <h1 class="hero-title">几分钟内获取数字证书</h1>
           <p class="hero-subtitle">通过视频会议</p>
           <p class="hero-description">
-            快速且安全的数字证书颁发。无论您在家中、工作中、巴西还是世界各地，TF
-            Assessor提供最实用的数字解决方案。
+            快速、安全地颁发数字证书。从家里、办公室、巴西或世界任何地方，TF
+            Assessor为您提供最实用的数字解决方案。
           </p>
           <div class="btn-group">
             <a
@@ -868,7 +832,7 @@
               target="_blank"
             >
               <i class="fa-brands fa-whatsapp"></i>
-              <p style="color: white">微信</p>
+              <p style="color: white">WhatsApp</p>
             </a>
           </div>
         </div>
@@ -879,7 +843,7 @@
           <div class="section-header">
             <h2 class="section-title">我们的数字证书</h2>
             <p class="section-description">
-              选择适合您的证书类型，简单、快速、安全地购买。
+              选择适合您的证书，简单、快速、安全地获取。
             </p>
           </div>
 
@@ -895,7 +859,7 @@
               <div class="feature-content">
                 <h4>e-CPF</h4>
                 <p>适用于个人的数字证书，适合签署文件和访问政府服务。</p>
-                <p><strong>价格：130.00雷亚尔</strong></p>
+                <p><strong>价格：130巴西雷亚尔</strong></p>
                 <a
                   style="font-size: 12px"
                   href="https://parceiro.gestaoar.shop/certidoc/tf-assessor"
@@ -916,8 +880,10 @@
               </div>
               <div class="feature-content">
                 <h4>e-CNPJ</h4>
-                <p>适用于公司的数字证书，用于开具电子发票和履行税务义务。</p>
-                <p><strong>价格：200.00雷亚尔</strong></p>
+                <p>
+                  适用于公司的数字证书，必要用于开具电子发票和履行税务义务。
+                </p>
+                <p><strong>价格：200巴西雷亚尔</strong></p>
                 <a
                   style="font-size: 12px"
                   href="https://parceiro.gestaoar.shop/certidoc/tf-assessor"
@@ -938,8 +904,8 @@
               </div>
               <div class="feature-content">
                 <h4>e-PJ</h4>
-                <p>用于安全认证和电子签名的数字身份应用程序。</p>
-                <p><strong>价格：230.00雷亚尔</strong></p>
+                <p>用于安全认证和电子签名的数字身份应用。</p>
+                <p><strong>价格：230巴西雷亚尔</strong></p>
                 <a
                   style="font-size: 12px"
                   href="https://parceiro.gestaoar.shop/certidoc/tf-assessor"
@@ -958,7 +924,7 @@
           <div class="section-header">
             <h2 class="section-title">可用证书</h2>
             <p class="section-description">
-              选择最适合您需求的证书，全部具有法律效力和国内外认可。
+              选择最适合您需求的证书。所有证书均具有法律效力，获得国内和国际认可。
             </p>
           </div>
 
@@ -970,7 +936,7 @@
               <h3 class="card-title">推荐计划</h3>
               <div class="commission-highlight">高达40%的佣金</div>
               <p class="card-description">
-                推荐客户并在每张颁发的证书上赚取佣金。拥有个性化品牌的电子商务平台，保证在次月10日前支付。
+                推荐客户并为每张颁发的证书赚取佣金。拥有您的品牌个性化电子商务平台，并保证在次月10日前支付。
               </p>
               <ul
                 style="
@@ -980,21 +946,21 @@
                 "
               >
                 <li>高达40%的佣金</li>
-                <li>个性化专属平台</li>
+                <li>个性化专有平台</li>
                 <li>全面技术支持</li>
                 <li>包含营销材料</li>
               </ul>
-              <a href="#contato" class="btn btn-primary">成为推荐者</a>
+              <a href="#contato" class="btn btn-primary">成为推荐人</a>
             </div>
 
             <div class="partnership-card">
               <div class="partnership-icon">
                 <i class="fa-solid fa-store"></i>
               </div>
-              <h3 class="card-title">分销商计划</h3>
-              <div class="commission-highlight">特殊价格</div>
+              <h3 class="card-title">经销商计划</h3>
+              <div class="commission-highlight">特价</div>
               <p class="card-description">
-                以特殊价格购买数字证书进行转售。完全自主定价，服务您的客户。
+                以特价购买数字证书用于转售。拥有完全的定价自主权，服务您的客户。
               </p>
               <ul
                 style="
@@ -1003,13 +969,13 @@
                   margin-bottom: 25px;
                 "
               >
-                <li>按量递增折扣</li>
+                <li>基于数量的递增折扣</li>
                 <li>完全定价自主权</li>
                 <li>专用技术支持</li>
                 <li>包含全面培训</li>
               </ul>
               <a style="font-size: 12px" href="#contato" class="btn btn-primary"
-                >成为分销商</a
+                >成为经销商</a
               >
             </div>
           </div>
@@ -1031,7 +997,7 @@
                 margin-bottom: 20px;
               "
             >
-              准备开始您的合作吗？
+              准备好开始您的合作伙伴关系了吗？
             </h4>
             <p
               style="
@@ -1045,16 +1011,18 @@
             <div class="btn-group">
               <a href="#contato" class="btn btn-primary">
                 <i class="fa-solid fa-rocket"></i>
-                <p style="color: white">申请合作</p>
+                <p style="color: white">申请合作伙伴关系</p>
               </a>
               <a
                 style="background: var(--secondary-color)"
-                href="https://web.whatsapp.com/send?phone=5518997284321&text=您好！我想了解更多关于CertiDoc合作计划的信息。"
+                href="https://web.whatsapp.com/send?phone=5518997284321&text=您好！我想了解更多关于CertiDoc合作伙伴计划的信息。"
                 class="btn btn-outline"
                 target="_blank"
               >
                 <i class="fa-brands fa-whatsapp"></i>
-                <p style="font-size: 18px; color: white">微信合作</p>
+                <p style="font-size: 18px; color: white">
+                  通过WhatsApp申请合作伙伴关系
+                </p>
               </a>
             </div>
           </div>
@@ -1066,7 +1034,7 @@
           <div class="section-header">
             <h2 class="section-title">常见问题</h2>
             <p class="section-description">
-              我们解答关于数字证书的主要疑问，帮助您做出明智的决定。
+              我们解答了关于数字证书的主要疑问，以帮助您做出明智的决定。
             </p>
           </div>
 
@@ -1090,7 +1058,7 @@
               <div class="feature-content">
                 <h4>需要多长时间收到证书？</h4>
                 <p>
-                  视频会议后，您的证书将在15分钟内颁发，并通过电子邮件直接发送，立即可用。
+                  视频会议后，您的证书将在15分钟内颁发，并直接发送到您的电子邮件，即刻可用。
                 </p>
               </div>
             </div>
@@ -1114,7 +1082,7 @@
               <div class="feature-content">
                 <h4>安全且具有法律效力吗？</h4>
                 <p>
-                  是的，我们的证书符合ICP-Brasil所有标准，具有完整的法律效力，被公共和私人机构接受。
+                  是的，我们的证书符合ICP-Brazil所有标准，具有法律效力，得到公共和私人机构的认可。
                 </p>
               </div>
             </div>
@@ -1134,7 +1102,7 @@
             </div>
             <div class="stat-item">
               <span class="stat-number">10,000+</span>
-              <span class="stat-label">已颁发证书</span>
+              <span class="stat-label">已颁发的证书</span>
             </div>
             <div class="stat-item">
               <span class="stat-number">5.0</span>
@@ -1154,7 +1122,7 @@
             <h2 class="section-title">客户评价</h2>
             <p class="section-description">
               TF
-              Assessor在谷歌上获得最高评分。超过400名客户分享了他们的正面体验。
+              Assessor在谷歌上拥有最高评分。超过400名客户分享了他们的正面体验。
             </p>
           </div>
 
@@ -1162,7 +1130,7 @@
             <div class="testimonial">
               <p class="testimonial-content">
                 TF
-                Assessor提供的服务超出了我的所有期望。他们关注我情况的每一个细节，甚至提供了额外信息。我强烈推荐这家公司，服务出色且高度个性化。
+                Assessor提供的服务超出了所有期望。他们处理了我的情况的每个细节，甚至提供了额外的信息。我强烈推荐这家公司；服务出色且高度个性化。
               </p>
               <div class="testimonial-author">
                 <div class="author-avatar">CM</div>
@@ -1176,8 +1144,8 @@
             <div class="testimonial">
               <p class="testimonial-content">
                 我与TF
-                Assessor的体验非常好，我非常满意。之前我通过另一家公司获得数字证书，所以有些犹豫，但尝试了TF
-                Assessor的在线系统后，服务清晰、直接且友好。
+                Assessor的体验是最好的，我非常满意。因为我之前在另一家公司获得了数字证书，所以有些犹豫，但尝试了TF
+                Assessor的在线系统后，服务清晰、客观且友好。
               </p>
               <div class="testimonial-author">
                 <div class="author-avatar">GB</div>
@@ -1196,7 +1164,7 @@
           <div class="section-header">
             <h2 class="section-title">联系我们</h2>
             <p class="section-description">
-              我们的专业团队随时为您提供服务。选择最方便的联系方式。
+              我们的专业团队随时为您提供帮助。选择最方便的联系方式。
             </p>
           </div>
 
@@ -1205,9 +1173,9 @@
               <div class="card-icon">
                 <i class="fa-brands fa-whatsapp"></i>
               </div>
-              <h3 class="card-title">微信</h3>
+              <h3 class="card-title">WhatsApp</h3>
               <p class="card-description">
-                通过微信获得快速和个性化的服务。直接通过聊天咨询问题并申请您的证书。
+                通过WhatsApp提供快速和个性化的支持。直接通过聊天提出您的问题并申请证书。
               </p>
               <a
                 href="https://web.whatsapp.com/send?phone=5518997284321&text=您好！我想申请我的数字证书。"
@@ -1216,7 +1184,7 @@
                 style="font-size: 14px"
               >
                 <i class="fa-brands fa-whatsapp"></i>
-                在微信上聊天
+                在WhatsApp上聊天
               </a>
             </div>
 
@@ -1226,10 +1194,10 @@
               </div>
               <h3 class="card-title">电子邮件</h3>
               <p class="card-description">
-                通过电子邮件发送您的请求，获得详细的支持和所有必要信息。
+                通过电子邮件发送您的请求，获得包含所有必要信息的详细支持。
               </p>
               <a
-                href="mailto:ti@tffiscal.com.br?subject=数字证书申请"
+                href="mailto:ti@tffiscal.com.br?subject=数字证书请求"
                 class="btn btn-primary"
                 style="font-size: 14px"
               >
@@ -1244,7 +1212,7 @@
               </div>
               <h3 class="card-title">电话</h3>
               <p class="card-description">
-                直接通过电话与我们的团队联系。服务时间：周一至周五，早上8点至下午6点。
+                通过电话直接与我们的团队联系。办公时间：周一至周五，早上8点至下午6点。
               </p>
               <a
                 href="tel:+5518997284321"
@@ -1283,7 +1251,7 @@
                 font-size: 18px;
               "
             >
-              几分钟内颁发 • 通过视频会议 • 巴西全国有效
+              几分钟内颁发 • 通过视频会议 • 在巴西全国有效
             </p>
             <a
               href="https://parceiro.gestaoar.shop/certidoc/tf-fiscal"
@@ -1310,7 +1278,7 @@
                     src="/i/assets/images/logo.png"
                     width="250"
                     height="auto"
-                    alt="CertiDoc标志"
+                    alt="TF Assessor Logo"
                   />
                 </div>
               </div>
@@ -1323,7 +1291,7 @@
               <div class="col-xl-12">
                 <div class="bd-footer-copyright-content">
                   <p class="bd-footer-copyright-text mb-0">
-                    自2007年起版权所有
+                    版权所有 © 2007
                     <span class="text-title fw-bold">TF Assessor</span
                     >。保留所有权利。
                   </p>
@@ -1362,7 +1330,7 @@
         height: 42px;
         line-height: 42px;
         transition: 0.3s;
-        background-image: url("/i/br/assets/images/whatsapp.png");
+        background-image: url("/i/assets/images/whatsapp.png");
         display: block;
         width: 55px;
         height: 55px;
@@ -1381,23 +1349,23 @@
 
     <script
       data-cfasync="false"
-      src="/i/br/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
+      src="/i/assets/js/email-decode.min.js"
     ></script>
-    <script src="/i/br/assets/js/vendor/jquery-3.7.1.min.js"></script>
-    <script src="/i/br/assets/js/plugins/waypoints.min.js"></script>
-    <script src="/i/br/assets/js/vendor/bootstrap.bundle.min.js"></script>
-    <script src="/i/br/assets/js/plugins/swiper.min.js"></script>
-    <script src="/i/br/assets/js/plugins/wow.js"></script>
-    <script src="/i/br/assets/js/vendor/magnific-popup.min.js"></script>
-    <script src="/i/br/assets/js/vendor/isotope.pkgd.min.js"></script>
-    <script src="/i/br/assets/js/vendor/imagesloaded.pkgd.min.js"></script>
-    <script src="/i/br/assets/js/plugins/nice-select.min.js"></script>
-    <script src="/i/br/assets/js/plugins/nouislider.min.js"></script>
-    <script src="/i/br/assets/js/vendor/ajax-form.js"></script>
-    <script src="/i/br/assets/js/plugins/easypie.js"></script>
-    <script src="/i/br/assets/js/vendor/purecounter.js"></script>
-    <script src="/i/br/assets/js/vendor/backtotop.js"></script>
-    <script src="/i/br/assets/js/main.js"></script>
+    <script src="/i/assets/js/vendor/jquery-3.7.1.min.js"></script>
+    <script src="/i/assets/js/plugins/waypoints.min.js"></script>
+    <script src="/i/assets/js/vendor/bootstrap.bundle.min.js"></script>
+    <script src="/i/assets/js/plugins/swiper.min.js"></script>
+    <script src="/i/assets/js/plugins/wow.js"></script>
+    <script src="/i/assets/js/vendor/magnific-popup.min.js"></script>
+    <script src="/i/assets/js/vendor/isotope.pkgd.min.js"></script>
+    <script src="/i/assets/js/vendor/imagesloaded.pkgd.min.js"></script>
+    <script src="/i/assets/js/plugins/nice-select.min.js"></script>
+    <script src="/i/assets/js/plugins/nouislider.min.js"></script>
+    <script src="/i/assets/js/vendor/ajax-form.js"></script>
+    <script src="/i/assets/js/plugins/easypie.js"></script>
+    <script src="/i/assets/js/vendor/purecounter.js"></script>
+    <script src="/i/assets/js/vendor/backtotop.js"></script>
+    <script src="/i/assets/js/main.js"></script>
     <script>
       $(document).ready(function () {
         $(".hamburger-menu").click(function () {
